--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.body{
+body{
     background-image: url(assets/images/clothes.jpg);
     background-position: center;
     background-repeat: no-repeat;
